<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

       <LinearLayout
           android:layout_marginLeft="11dp"
           android:layout_marginRight="11dp"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="vertical">
             <EditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/input_text"
                 android:id="@+id/input"
                 android:importantForAutofill="no"
                 android:inputType="" />

             <EditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/out"
                 android:id="@+id/out"
                 android:importantForAutofill="no"
                 android:inputType=""
                  />

             <LinearLayout
                 android:layout_marginTop="33dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal" >
                  <Button
                      android:layout_width="match_parent"
                      android:layout_height="match_parent"
                      android:id="@+id/clear"
                      android:text="@string/clear"
                      android:layout_weight="1"
                      tools:ignore="ButtonStyle" />
                 <Button
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:id="@+id/translate"
                     android:text="@string/translate"
                     android:layout_weight="1"
                     tools:ignore="ButtonStyle" />
             </LinearLayout>

             <LinearLayout
                 android:layout_marginTop="33dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
                 >
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal">
                     <RadioButton
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:checked="true"
                         android:id="@+id/english"
                         >
                     </RadioButton>
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@string/english"/>
                 </LinearLayout>
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal">
                     <RadioButton
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:checked="false"
                         android:id="@+id/spain"
                         >
                     </RadioButton>
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@string/spain"/>
                 </LinearLayout>
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal">
                     <RadioButton
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:checked="false"
                         android:id="@+id/rus"
                         >
                     </RadioButton>
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@string/russian"/>
                 </LinearLayout>
             </LinearLayout>

       </LinearLayout>
   </ScrollView>
